--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,5 @@
-TRADE_EQUITY_PERCENT: 2
-TELEGRAM_GROUP_NAME: "Magic Trader Signals"
+INTITIAL_TRADE_EQUITY_PERCENT: 2
+MARTINGALE_TRADE_EQUITY_PERCENT: 2.5
+TELEGRAM_GROUP_NAME: "SK VIP Real Market Signals"
 ACCOUNT: "Demo"
+DELAY_AFTER_FAILURE: 35
